k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  labels:
    app: laravel-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      containers:
        - name: laravel-container
          image: ghcr.io/momenhussein/ci-cd-hello-php:latest
          ports:
            - containerPort: 80
