k8s/laravel-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
        - name: php-container
          image: ghcr.io/momenhussein/ci-cd-hello-php:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr-secret
