k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-react-ingress
  namespace: laravel-react-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: laravel.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: laravel-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
